# Nvidia-AI-Agent-Hackathon

./: .gitignore  Cargo.toml  README.md
frontend/: README.md  next.config.js  package-lock.json  package.json
frontend/.next/: prerender-manifest.js  routes-manifest.json  trace
frontend/.next/cache/: .rscinfo  .tsbuildinfo
frontend/.next/server/: app-paths-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: _not-found.js  _not-found.js.nft.json  _not-found_client-reference-manifest.js  not-found_client-reference-manifest.js  page.js  page.js.nft.json  page_client-reference-manifest.js
frontend/.next/server/chunks/: 485.js  550.js  870.js
frontend/.next/server/vendor-chunks/: @swc.js  lucide-react.js  next.js
frontend/.next/static/HxV3jgRI4wgL8Ka2KoSY6/: _buildManifest.js
frontend/.next/static/chunks/: app-pages-internals.js  (+4 more)
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AgentStatus.tsx  ChatInterface.tsx  ComplianceScore.tsx  PiiScanner.tsx  ResultsDisplay.tsx
frontend/src/lib/: types.ts
python/: Dockerfile  README_DEPLOYMENT.md  app.py  brev.yaml  chatbot_demo.py  deploy.sh  langchain_reasoner.py  langchain_reasoner_mock.py  requirements.txt
src/: coordinator.rs  lib.rs  main.rs  types.rs  web_server.rs
src/agents/: chatbot_compliance.rs  compliance_enforcer.rs  llm_reasoner.rs  mod.rs  pii_scanner.rs
src/models/: mod.rs  pii_classifier.rs
src/utils/: chatbot_demo.rs  demo_data.rs  mod.rs
(+52 files in other folders)
