[package]
name = "pii-compliance-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core neural network and agent framework
# Using standard Rust crates for hackathon compatibility
# Note: Simplified for demo - can be enhanced with actual ML crates

# CLI and utilities
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

# Text processing and regex
regex = "1.0"
unicode-segmentation = "1.0"

# Logging and error handling
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"

# Async traits
async-trait = "0.1"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Chrono for timestamps
chrono = { version = "0.4", features = ["serde"] }

# Optional: WASM support for sandboxing
wasm-bindgen = "0.2"
js-sys = "0.3" 